--- a/ui/style.css
+++ b/ui/style.css
@@ -72,7 +72,7 @@ button:disabled {
 #credits-list {
 	overflow: auto;
 	flex-grow: 1;
-	padding-top: 0.75vh;
+	padding: 0.75vh 0.5vw 0 0.5vw;
 }
 
 .credit {
